proyecto2/parser.output
Terminals unused in grammar

   tamanio
   verdadero
   falso
   insertar
   obtener
   buscar
   apilar
   desapilar
   encolar
   desencolar


Grammar

    0 $accept: INICIO $end

    1 INICIO: SENTENCIASG

    2 SENTENCIASG: SENTENCIASG INSTRUCCIONG
    3            | INSTRUCCIONG

    4 INSTRUCCIONG: IMPORTAR puntoComa
    5             | CLASE

    6 IMPRIMIR: imprimir parA EXPL parC
    7         | imprimir parA CONCATENAR parC

    8 CONCATENAR: concatenar parA EXPL coma EXPL parC
    9           | concatenar parA EXPL coma EXPL coma EXPL parC

   10 IMPORTAR: importar parA cadena parC

   11 ICLASES: ICLASES ICLASE
   12        | ICLASE

   13 ICLASE: FUNCION
   14       | sobreescribir FUNCION
   15       | ATRIBUTO
   16       | PRINCIPAL
   17       | CONSTRUCTOR
   18       | sobreescribir CONSTRUCTOR

   19 SENTENCIAS: SENTENCIAS INSTRUCCION
   20           | INSTRUCCION

   21 INSTRUCCION: DECLARACION puntoComa
   22            | DECLARACIONARRAY puntoComa
   23            | ASIGNACION puntoComa
   24            | CONCATENAR puntoComa
   25            | IMPRIMIR puntoComa
   26            | RETORNO puntoComa
   27            | LLAMADA puntoComa
   28            | MIENTRAS
   29            | SI
   30            | UNARIOS puntoComa
   31            | SELECCIONAR
   32            | HACER puntoComa
   33            | PARA
   34            | detener puntoComa
   35            | continuar puntoComa
   36            | DECESTRUCTURAS puntoComa
   37            | mostraredd parA id parC puntoComa
   38            | LEER puntoComa

   39 LEER: leer_teclado parA EXPL coma EXPL parC

   40 PARA: para parA ASIGNACION puntoComa EXPL puntoComa ASIGNACION parC illave SENTENCIAS fllave
   41     | para parA DECLARACION puntoComa EXPL puntoComa ASIGNACION parC illave SENTENCIAS fllave
   42     | para parA ASIGNACION puntoComa EXPL puntoComa UNARIOS parC illave SENTENCIAS fllave
   43     | para parA DECLARACION puntoComa EXPL puntoComa UNARIOS parC illave SENTENCIAS fllave

   44 HACER: hacer illave SENTENCIAS fllave mientras parA EXPL parC

   45 MIENTRAS: mientras parA EXPL parC illave SENTENCIAS fllave

   46 SI: si parA EXPL parC illave SENTENCIAS fllave
   47   | si parA EXPL parC illave SENTENCIAS fllave ELSE

   48 ELSE: SINOSI sino illave SENTENCIAS fllave
   49     | SINOSI
   50     | sino illave SENTENCIAS fllave

   51 SINOSI: SINOSI sinosi parA EXPL parC illave SENTENCIAS fllave
   52       | sinosi parA EXPL parC illave SENTENCIAS fllave

   53 SELECCIONAR: selecciona parA EXPL parC illave CASOS fllave

   54 CASOS: LCASOS defecto dosP illave SENTENCIAS fllave
   55      | defecto dosP illave SENTENCIAS fllave

   56 LCASOS: LCASOS CASO
   57       | CASO

   58 CASO: caso EXPL dosP illave SENTENCIAS fllave

   59 RETORNO: retornar EXPL

   60 ATRIBUTO: VISIBILIDAD DECLARACION puntoComa
   61         | DECLARACION puntoComa
   62         | VISIBILIDAD DECLARACIONARRAY puntoComa
   63         | DECLARACIONARRAY puntoComa

   64 VISIBILIDAD: publico
   65            | privado
   66            | protegido

   67 INSTANCIA: nuevo id parA LPAR parC
   68          | nuevo id parA parC

   69 LPARAMETROS: PARAMETROS
   70            | %empty

   71 PARAMETROS: PARAMETROS coma PARAMETRO
   72           | PARAMETRO

   73 PARAMETRO: TIPO id
   74          | TIPO id DIMENSIONES

   75 PRINCIPAL: principal parA parC illave SENTENCIAS fllave

   76 CONSTRUCTOR: VISIBILIDAD id parA LPARAMETROS parC illave SENTENCIAS fllave
   77            | id parA LPARAMETROS parC illave SENTENCIAS fllave

   78 FUNCION: VISIBILIDAD TIPO DIMS id parA LPARAMETROS parC illave SENTENCIAS fllave
   79        | VISIBILIDAD TIPO id parA LPARAMETROS parC illave SENTENCIAS fllave
   80        | VISIBILIDAD vacio id parA LPARAMETROS parC illave SENTENCIAS fllave
   81        | TIPO DIMS id parA LPARAMETROS parC illave SENTENCIAS fllave
   82        | TIPO id parA LPARAMETROS parC illave SENTENCIAS fllave
   83        | vacio id parA LPARAMETROS parC illave SENTENCIAS fllave

   84 DIMS: DIMS DIM
   85     | DIM

   86 DIM: iCor fCor

   87 CLASE: VISIBILIDAD clase id illave ICLASES fllave
   88      | clase id illave ICLASES fllave
   89      | VISIBILIDAD clase id heredade id illave ICLASES fllave
   90      | clase id heredade id illave ICLASES fllave

   91 ASIGNACION: id TIPOASIG VALAS
   92           | id DIMENSIONES TIPOASIG VALAS
   93           | LLAMADA TIPOASIG VALAS
   94           | este ACCESO TIPOASIG VALAS
   95           | id DIMENSIONES ACCESO TIPOASIG VALAS

   96 TIPOASIG: masigual
   97         | porigual
   98         | menosigual
   99         | divigual
  100         | igual

  101 DECLARACION: TIPO id
  102            | TIPO id igual VALAS

  103 DECESTRUCTURAS: lista id igual nuevo lista parA TIPO parC
  104               | pila id igual nuevo pila parA TIPO parC
  105               | cola id igual nuevo cola parA TIPO parC

  106 DECLARACIONARRAY: TIPO id DIMENSIONES
  107                 | TIPO id DIMENSIONES igual EXPL
  108                 | TIPO id DIMENSIONES igual VALORESA

  109 DIMENSIONES: DIMENSIONES iCor EXPL fCor
  110            | iCor EXPL fCor

  111 VALORESA: illave LVALORES fllave

  112 LVALORES: LVALORES coma illave VALORES fllave
  113         | illave VALORES fllave

  114 VALORES: VALORES coma EXPL
  115        | EXPL

  116 VALAS: EXPL
  117      | SENTSELEC
  118      | INSTANCIA

  119 TIPO: tipoBooleano
  120     | tipoEntero
  121     | tipoCaracter
  122     | tipoDecimal
  123     | id

  124 SENTSELEC: EXPL interrogacion EXPL dosP EXPL

  125 EXPL: EXPL y EXPL
  126     | EXPL o EXPL
  127     | no EXPL
  128     | EXPR

  129 EXPR: EXPA igualigual EXPA
  130     | EXPA desigual EXPA
  131     | EXPA menor EXPA
  132     | EXPA mayor EXPA
  133     | EXPA menorigual EXPA
  134     | EXPA mayorigual EXPA
  135     | EXPA

  136 EXPA: EXPA suma EXPA
  137     | EXPA menos EXPA
  138     | EXPA multi EXPA
  139     | EXPA division EXPA
  140     | EXPA potencia EXPA
  141     | menos EXPA
  142     | id
  143     | id DIMENSIONES
  144     | entero
  145     | caracter
  146     | decimal
  147     | booleano
  148     | cadena
  149     | nada
  150     | UNARIOS
  151     | parA EXPL parC
  152     | id DIMENSIONES ACCESO
  153     | este ACCESO
  154     | convertirAcadena parA EXPL parC
  155     | convertirAentero parA EXPL parC
  156     | LLAMADA

  157 LPAR: LPAR coma EXPL
  158     | EXPL

  159 LLAMADA: id parA parC
  160        | id parA LPAR parC
  161        | id parA parC ACCESO
  162        | id parA LPAR parC ACCESO
  163        | id ACCESO

  164 UNARIOS: EXPA aumento
  165        | EXPA decremento

  166 ACCESO: ACCESO punto id
  167       | ACCESO punto id parA parC
  168       | ACCESO punto id parA LPAR parC
  169       | ACCESO punto id DIMENSIONES
  170       | punto id
  171       | punto id parA parC
  172       | punto id parA LPAR parC
  173       | punto id DIMENSIONES


Terminals, with rules where they appear

$end (0) 0
error (256)
entero <TEXT> (258) 144
decimal <TEXT> (259) 146
caracter <TEXT> (260) 145
booleano <TEXT> (261) 147
cadena <TEXT> (262) 10 148
id <TEXT> (263) 37 67 68 73 74 76 77 78 79 80 81 82 83 87 88 89 90
    91 92 95 101 102 103 104 105 106 107 108 123 142 143 152 159 160
    161 162 163 166 167 168 169 170 171 172 173
parA <TEXT> (264) 6 7 8 9 10 37 39 40 41 42 43 44 45 46 47 51 52 53
    67 68 75 76 77 78 79 80 81 82 83 103 104 105 151 154 155 159 160
    161 162 167 168 171 172
parC <TEXT> (265) 6 7 8 9 10 37 39 40 41 42 43 44 45 46 47 51 52 53
    67 68 75 76 77 78 79 80 81 82 83 103 104 105 151 154 155 159 160
    161 162 167 168 171 172
illave <TEXT> (266) 40 41 42 43 44 45 46 47 48 50 51 52 53 54 55 58
    75 76 77 78 79 80 81 82 83 87 88 89 90 111 112 113
fllave <TEXT> (267) 40 41 42 43 44 45 46 47 48 50 51 52 53 54 55 58
    75 76 77 78 79 80 81 82 83 87 88 89 90 111 112 113
iCor <TEXT> (268) 86 109 110
fCor <TEXT> (269) 86 109 110
dosP <TEXT> (270) 54 55 58 124
coma <TEXT> (271) 8 9 39 71 112 114 157
aumento <TEXT> (272) 164
decremento <TEXT> (273) 165
masigual <TEXT> (274) 96
porigual <TEXT> (275) 97
menosigual <TEXT> (276) 98
divigual <TEXT> (277) 99
suma <TEXT> (278) 136
menos <TEXT> (279) 137 141
multi <TEXT> (280) 138
division <TEXT> (281) 139
potencia <TEXT> (282) 140
mayor <TEXT> (283) 132
menor <TEXT> (284) 131
mayorigual <TEXT> (285) 134
menorigual <TEXT> (286) 133
igualigual <TEXT> (287) 129
desigual <TEXT> (288) 130
o <TEXT> (289) 126
y <TEXT> (290) 125
igual <TEXT> (291) 100 102 103 104 105 107 108
no <TEXT> (292) 127
interrogacion <TEXT> (293) 124
tipoBooleano <TEXT> (294) 119
tipoEntero <TEXT> (295) 120
tipoCaracter <TEXT> (296) 121
tipoDecimal <TEXT> (297) 122
imprimir <TEXT> (298) 6 7
concatenar <TEXT> (299) 8 9
tamanio <TEXT> (300)
verdadero <TEXT> (301)
falso <TEXT> (302)
convertirAcadena <TEXT> (303) 154
convertirAentero <TEXT> (304) 155
clase <TEXT> (305) 87 88 89 90
este <TEXT> (306) 94 153
publico <TEXT> (307) 64
privado <TEXT> (308) 65
protegido <TEXT> (309) 66
vacio <TEXT> (310) 80 83
heredade <TEXT> (311) 89 90
retornar <TEXT> (312) 59
importar <TEXT> (313) 10
sobreescribir <TEXT> (314) 14 18
principal <TEXT> (315) 75
nuevo <TEXT> (316) 67 68 103 104 105
nada <TEXT> (317) 149
detener <TEXT> (318) 34
continuar <TEXT> (319) 35
si <TEXT> (320) 46 47
sinosi <TEXT> (321) 51 52
sino <TEXT> (322) 48 50
selecciona <TEXT> (323) 53
caso <TEXT> (324) 58
defecto <TEXT> (325) 54 55
mientras <TEXT> (326) 44 45
hacer <TEXT> (327) 44
para <TEXT> (328) 40 41 42 43
lista <TEXT> (329) 103
insertar <TEXT> (330)
obtener <TEXT> (331)
buscar <TEXT> (332)
pila <TEXT> (333) 104
apilar <TEXT> (334)
desapilar <TEXT> (335)
cola <TEXT> (336) 105
encolar <TEXT> (337)
desencolar <TEXT> (338)
mostraredd <TEXT> (339) 37
leer_teclado <TEXT> (340) 39
puntoComa <TEXT> (341) 4 21 22 23 24 25 26 27 30 32 34 35 36 37 38
    40 41 42 43 60 61 62 63
punto <TEXT> (342) 166 167 168 169 170 171 172 173


Nonterminals, with rules where they appear

$accept (88)
    on left: 0
INICIO <nodito> (89)
    on left: 1, on right: 0
SENTENCIASG <nodito> (90)
    on left: 2 3, on right: 1 2
INSTRUCCIONG <nodito> (91)
    on left: 4 5, on right: 2 3
IMPRIMIR <nodito> (92)
    on left: 6 7, on right: 25
CONCATENAR <nodito> (93)
    on left: 8 9, on right: 7 24
IMPORTAR <nodito> (94)
    on left: 10, on right: 4
ICLASES <nodito> (95)
    on left: 11 12, on right: 11 87 88 89 90
ICLASE <nodito> (96)
    on left: 13 14 15 16 17 18, on right: 11 12
SENTENCIAS <nodito> (97)
    on left: 19 20, on right: 19 40 41 42 43 44 45 46 47 48 50 51 52
    54 55 58 75 76 77 78 79 80 81 82 83
INSTRUCCION <nodito> (98)
    on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38,
    on right: 19 20
LEER <nodito> (99)
    on left: 39, on right: 38
PARA <nodito> (100)
    on left: 40 41 42 43, on right: 33
HACER <nodito> (101)
    on left: 44, on right: 32
MIENTRAS <nodito> (102)
    on left: 45, on right: 28
SI <nodito> (103)
    on left: 46 47, on right: 29
ELSE <nodito> (104)
    on left: 48 49 50, on right: 47
SINOSI <nodito> (105)
    on left: 51 52, on right: 48 49 51
SELECCIONAR <nodito> (106)
    on left: 53, on right: 31
CASOS <nodito> (107)
    on left: 54 55, on right: 53
LCASOS <nodito> (108)
    on left: 56 57, on right: 54 56
CASO <nodito> (109)
    on left: 58, on right: 56 57
RETORNO <nodito> (110)
    on left: 59, on right: 26
ATRIBUTO <nodito> (111)
    on left: 60 61 62 63, on right: 15
VISIBILIDAD <nodito> (112)
    on left: 64 65 66, on right: 60 62 76 78 79 80 87 89
INSTANCIA <nodito> (113)
    on left: 67 68, on right: 118
LPARAMETROS <nodito> (114)
    on left: 69 70, on right: 76 77 78 79 80 81 82 83
PARAMETROS <nodito> (115)
    on left: 71 72, on right: 69 71
PARAMETRO <nodito> (116)
    on left: 73 74, on right: 71 72
PRINCIPAL <nodito> (117)
    on left: 75, on right: 16
CONSTRUCTOR <nodito> (118)
    on left: 76 77, on right: 17 18
FUNCION <nodito> (119)
    on left: 78 79 80 81 82 83, on right: 13 14
DIMS <nodito> (120)
    on left: 84 85, on right: 78 81 84
DIM <nodito> (121)
    on left: 86, on right: 84 85
CLASE <nodito> (122)
    on left: 87 88 89 90, on right: 5
ASIGNACION <nodito> (123)
    on left: 91 92 93 94 95, on right: 23 40 41 42
TIPOASIG <nodito> (124)
    on left: 96 97 98 99 100, on right: 91 92 93 94 95
DECLARACION <nodito> (125)
    on left: 101 102, on right: 21 41 43 60 61
DECESTRUCTURAS <nodito> (126)
    on left: 103 104 105, on right: 36
DECLARACIONARRAY <nodito> (127)
    on left: 106 107 108, on right: 22 62 63
DIMENSIONES <nodito> (128)
    on left: 109 110, on right: 74 92 95 106 107 108 109 143 152 169
    173
VALORESA <nodito> (129)
    on left: 111, on right: 108
LVALORES <nodito> (130)
    on left: 112 113, on right: 111 112
VALORES <nodito> (131)
    on left: 114 115, on right: 112 113 114
VALAS <nodito> (132)
    on left: 116 117 118, on right: 91 92 93 94 95 102
TIPO <nodito> (133)
    on left: 119 120 121 122 123, on right: 73 74 78 79 81 82 101 102
    103 104 105 106 107 108
SENTSELEC <nodito> (134)
    on left: 124, on right: 117
EXPL <nodito> (135)
    on left: 125 126 127 128, on right: 6 8 9 39 40 41 42 43 44 45
    46 47 51 52 53 58 59 107 109 110 114 115 116 124 125 126 127 151
    154 155 157 158
EXPR <nodito> (136)
    on left: 129 130 131 132 133 134 135, on right: 128
EXPA <nodito> (137)
    on left: 136 137 138 139 140 141 142 143 144 145 146 147 148 149
    150 151 152 153 154 155 156, on right: 129 130 131 132 133 134
    135 136 137 138 139 140 141 164 165
LPAR <nodito> (138)
    on left: 157 158, on right: 67 157 160 162 168 172
LLAMADA <nodito> (139)
    on left: 159 160 161 162 163, on right: 27 93 156
UNARIOS <nodito> (140)
    on left: 164 165, on right: 30 42 43 150
ACCESO <nodito> (141)
    on left: 166 167 168 169 170 171 172 173, on right: 94 95 152 153
    161 162 163 166 167 168 169


State 0

    0 $accept: . INICIO $end

    clase      shift, and go to state 1
    publico    shift, and go to state 2
    privado    shift, and go to state 3
    protegido  shift, and go to state 4
    importar   shift, and go to state 5

    INICIO        go to state 6
    SENTENCIASG   go to state 7
    INSTRUCCIONG  go to state 8
    IMPORTAR      go to state 9
    VISIBILIDAD   go to state 10
    CLASE         go to state 11


State 1

   88 CLASE: clase . id illave ICLASES fllave
   90      | clase . id heredade id illave ICLASES fllave

    id  shift, and go to state 12


State 2

   64 VISIBILIDAD: publico .

    $default  reduce using rule 64 (VISIBILIDAD)


State 3

   65 VISIBILIDAD: privado .

    $default  reduce using rule 65 (VISIBILIDAD)


State 4

   66 VISIBILIDAD: protegido .

    $default  reduce using rule 66 (VISIBILIDAD)


State 5

   10 IMPORTAR: importar . parA cadena parC

    parA  shift, and go to state 13


State 6

    0 $accept: INICIO . $end

    $end  shift, and go to state 14


State 7

    1 INICIO: SENTENCIASG .
    2 SENTENCIASG: SENTENCIASG . INSTRUCCIONG

    clase      shift, and go to state 1
    publico    shift, and go to state 2
    privado    shift, and go to state 3
    protegido  shift, and go to state 4
    importar   shift, and go to state 5

    $default  reduce using rule 1 (INICIO)

    INSTRUCCIONG  go to state 15
    IMPORTAR      go to state 9
    VISIBILIDAD   go to state 10
    CLASE         go to state 11


State 8

    3 SENTENCIASG: INSTRUCCIONG .

    $default  reduce using rule 3 (SENTENCIASG)


State 9

    4 INSTRUCCIONG: IMPORTAR . puntoComa

    puntoComa  shift, and go to state 16


State 10

   87 CLASE: VISIBILIDAD . clase id illave ICLASES fllave
   89      | VISIBILIDAD . clase id heredade id illave ICLASES fllave

    clase  shift, and go to state 17


State 11

    5 INSTRUCCIONG: CLASE .

    $default  reduce using rule 5 (INSTRUCCIONG)


State 12

   88 CLASE: clase id . illave ICLASES fllave
   90      | clase id . heredade id illave ICLASES fllave

    illave    shift, and go to state 18
    heredade  shift, and go to state 19


State 13

   10 IMPORTAR: importar parA . cadena parC

    cadena  shift, and go to state 20


State 14

    0 $accept: INICIO $end .

    $default  accept


State 15

    2 SENTENCIASG: SENTENCIASG INSTRUCCIONG .

    $default  reduce using rule 2 (SENTENCIASG)


State 16

    4 INSTRUCCIONG: IMPORTAR puntoComa .

    $default  reduce using rule 4 (INSTRUCCIONG)


State 17

   87 CLASE: VISIBILIDAD clase . id illave ICLASES fllave
   89      | VISIBILIDAD clase . id heredade id illave ICLASES fllave

    id  shift, and go to state 21


State 18

   88 CLASE: clase id illave . ICLASES fllave

    id             shift, and go to state 22
    tipoBooleano   shift, and go to state 23
    tipoEntero     shift, and go to state 24
    tipoCaracter   shift, and go to state 25
    tipoDecimal    shift, and go to state 26
    publico        shift, and go to state 2
    privado        shift, and go to state 3
    protegido      shift, and go to state 4
    vacio          shift, and go to state 27
    sobreescribir  shift, and go to state 28
    principal      shift, and go to state 29

    ICLASES           go to state 30
    ICLASE            go to state 31
    ATRIBUTO          go to state 32
    VISIBILIDAD       go to state 33
    PRINCIPAL         go to state 34
    CONSTRUCTOR       go to state 35
    FUNCION           go to state 36
    DECLARACION       go to state 37
    DECLARACIONARRAY  go to state 38
    TIPO              go to state 39


State 19

   90 CLASE: clase id heredade . id illave ICLASES fllave

    id  shift, and go to state 40


State 20

   10 IMPORTAR: importar parA cadena . parC

    parC  shift, and go to state 41


State 21

   87 CLASE: VISIBILIDAD clase id . illave ICLASES fllave
   89      | VISIBILIDAD clase id . heredade id illave ICLASES fllave

    illave    shift, and go to state 42
    heredade  shift, and go to state 43


State 22

   77 CONSTRUCTOR: id . parA LPARAMETROS parC illave SENTENCIAS fllave
  123 TIPO: id .

    parA  shift, and go to state 44

    $default  reduce using rule 123 (TIPO)


State 23

  119 TIPO: tipoBooleano .

    $default  reduce using rule 119 (TIPO)


State 24

  120 TIPO: tipoEntero .

    $default  reduce using rule 120 (TIPO)


State 25

  121 TIPO: tipoCaracter .

    $default  reduce using rule 121 (TIPO)


State 26

  122 TIPO: tipoDecimal .

    $default  reduce using rule 122 (TIPO)


State 27

   83 FUNCION: vacio . id parA LPARAMETROS parC illave SENTENCIAS fllave

    id  shift, and go to state 45


State 28

   14 ICLASE: sobreescribir . FUNCION
   18       | sobreescribir . CONSTRUCTOR

    id            shift, and go to state 22
    tipoBooleano  shift, and go to state 23
    tipoEntero    shift, and go to state 24
    tipoCaracter  shift, and go to state 25
    tipoDecimal   shift, and go to state 26
    publico       shift, and go to state 2
    privado       shift, and go to state 3
    protegido     shift, and go to state 4
    vacio         shift, and go to state 27

    VISIBILIDAD  go to state 46
    CONSTRUCTOR  go to state 47
    FUNCION      go to state 48
    TIPO         go to state 49


State 29

   75 PRINCIPAL: principal . parA parC illave SENTENCIAS fllave

    parA  shift, and go to state 50


State 30

   11 ICLASES: ICLASES . ICLASE
   88 CLASE: clase id illave ICLASES . fllave

    id             shift, and go to state 22
    fllave         shift, and go to state 51
    tipoBooleano   shift, and go to state 23
    tipoEntero     shift, and go to state 24
    tipoCaracter   shift, and go to state 25
    tipoDecimal    shift, and go to state 26
    publico        shift, and go to state 2
    privado        shift, and go to state 3
    protegido      shift, and go to state 4
    vacio          shift, and go to state 27
    sobreescribir  shift, and go to state 28
    principal      shift, and go to state 29

    ICLASE            go to state 52
    ATRIBUTO          go to state 32
    VISIBILIDAD       go to state 33
    PRINCIPAL         go to state 34
    CONSTRUCTOR       go to state 35
    FUNCION           go to state 36
    DECLARACION       go to state 37
    DECLARACIONARRAY  go to state 38
    TIPO              go to state 39


State 31

   12 ICLASES: ICLASE .

    $default  reduce using rule 12 (ICLASES)


State 32

   15 ICLASE: ATRIBUTO .

    $default  reduce using rule 15 (ICLASE)


State 33

   60 ATRIBUTO: VISIBILIDAD . DECLARACION puntoComa
   62         | VISIBILIDAD . DECLARACIONARRAY puntoComa
   76 CONSTRUCTOR: VISIBILIDAD . id parA LPARAMETROS parC illave SENTENCIAS fllave
   78 FUNCION: VISIBILIDAD . TIPO DIMS id parA LPARAMETROS parC illave SENTENCIAS fllave
   79        | VISIBILIDAD . TIPO id parA LPARAMETROS parC illave SENTENCIAS fllave
   80        | VISIBILIDAD . vacio id parA LPARAMETROS parC illave SENTENCIAS fllave

    id            shift, and go to state 53
    tipoBooleano  shift, and go to state 23
    tipoEntero    shift, and go to state 24
    tipoCaracter  shift, and go to state 25
    tipoDecimal   shift, and go to state 26
    vacio         shift, and go to state 54

    DECLARACION       go to state 55
    DECLARACIONARRAY  go to state 56
    TIPO              go to state 57


State 34

   16 ICLASE: PRINCIPAL .

    $default  reduce using rule 16 (ICLASE)


State 35

   17 ICLASE: CONSTRUCTOR .

    $default  reduce using rule 17 (ICLASE)


State 36

   13 ICLASE: FUNCION .

    $default  reduce using rule 13 (ICLASE)


State 37

   61 ATRIBUTO: DECLARACION . puntoComa

    puntoComa  shift, and go to state 58


State 38

   63 ATRIBUTO: DECLARACIONARRAY . puntoComa

    puntoComa  shift, and go to state 59


State 39

   81 FUNCION: TIPO . DIMS id parA LPARAMETROS parC illave SENTENCIAS fllave
   82        | TIPO . id parA LPARAMETROS parC illave SENTENCIAS fllave
  101 DECLARACION: TIPO . id
  102            | TIPO . id igual VALAS
  106 DECLARACIONARRAY: TIPO . id DIMENSIONES
  107                 | TIPO . id DIMENSIONES igual EXPL
  108                 | TIPO . id DIMENSIONES igual VALORESA

    id    shift, and go to state 60
    iCor  shift, and go to state 61

    DIMS  go to state 62
    DIM   go to state 63


State 40

   90 CLASE: clase id heredade id . illave ICLASES fllave

    illave  shift, and go to state 64


State 41

   10 IMPORTAR: importar parA cadena parC .

    $default  reduce using rule 10 (IMPORTAR)


State 42

   87 CLASE: VISIBILIDAD clase id illave . ICLASES fllave

    id             shift, and go to state 22
    tipoBooleano   shift, and go to state 23
    tipoEntero     shift, and go to state 24
    tipoCaracter   shift, and go to state 25
    tipoDecimal    shift, and go to state 26
    publico        shift, and go to state 2
    privado        shift, and go to state 3
    protegido      shift, and go to state 4
    vacio          shift, and go to state 27
    sobreescribir  shift, and go to state 28
    principal      shift, and go to state 29

    ICLASES           go to state 65
    ICLASE            go to state 31
    ATRIBUTO          go to state 32
    VISIBILIDAD       go to state 33
    PRINCIPAL         go to state 34
    CONSTRUCTOR       go to state 35
    FUNCION           go to state 36
    DECLARACION       go to state 37
    DECLARACIONARRAY  go to state 38
    TIPO              go to state 39


State 43

   89 CLASE: VISIBILIDAD clase id heredade . id illave ICLASES fllave

    id  shift, and go to state 66


State 44

   77 CONSTRUCTOR: id parA . LPARAMETROS parC illave SENTENCIAS fllave

    id            shift, and go to state 67
    tipoBooleano  shift, and go to state 23
    tipoEntero    shift, and go to state 24
    tipoCaracter  shift, and go to state 25
    tipoDecimal   shift, and go to state 26

    $default  reduce using rule 70 (LPARAMETROS)

    LPARAMETROS  go to state 68
    PARAMETROS   go to state 69
    PARAMETRO    go to state 70
    TIPO         go to state 71


State 45

   83 FUNCION: vacio id . parA LPARAMETROS parC illave SENTENCIAS fllave

    parA  shift, and go to state 72


State 46

   76 CONSTRUCTOR: VISIBILIDAD . id parA LPARAMETROS parC illave SENTENCIAS fllave
   78 FUNCION: VISIBILIDAD . TIPO DIMS id parA LPARAMETROS parC illave SENTENCIAS fllave
   79        | VISIBILIDAD . TIPO id parA LPARAMETROS parC illave SENTENCIAS fllave
   80        | VISIBILIDAD . vacio id parA LPARAMETROS parC illave SENTENCIAS fllave

    id            shift, and go to state 53
    tipoBooleano  shift, and go to state 23
    tipoEntero    shift, and go to state 24
    tipoCaracter  shift, and go to state 25
    tipoDecimal   shift, and go to state 26
    vacio         shift, and go to state 54

    TIPO  go to state 73


State 47

   18 ICLASE: sobreescribir CONSTRUCTOR .

    $default  reduce using rule 18 (ICLASE)


State 48

   14 ICLASE: sobreescribir FUNCION .

    $default  reduce using rule 14 (ICLASE)


State 49

   81 FUNCION: TIPO . DIMS id parA LPARAMETROS parC illave SENTENCIAS fllave
   82        | TIPO . id parA LPARAMETROS parC illave SENTENCIAS fllave

    id    shift, and go to state 74
    iCor  shift, and go to state 61

    DIMS  go to state 62
    DIM   go to state 63


State 50

   75 PRINCIPAL: principal parA . parC illave SENTENCIAS fllave

    parC  shift, and go to state 75


State 51

   88 CLASE: clase id illave ICLASES fllave .

    $default  reduce using rule 88 (CLASE)


State 52

   11 ICLASES: ICLASES ICLASE .

    $default  reduce using rule 11 (ICLASES)


State 53

   76 CONSTRUCTOR: VISIBILIDAD id . parA LPARAMETROS parC illave SENTENCIAS fllave
  123 TIPO: id .

    parA  shift, and go to state 76

    $default  reduce using rule 123 (TIPO)


State 54

   80 FUNCION: VISIBILIDAD vacio . id parA LPARAMETROS parC illave SENTENCIAS fllave

    id  shift, and go to state 77


State 55

   60 ATRIBUTO: VISIBILIDAD DECLARACION . puntoComa

    puntoComa  shift, and go to state 78


State 56

   62 ATRIBUTO: VISIBILIDAD DECLARACIONARRAY . puntoComa

    puntoComa  shift, and go to state 79


State 57

   78 FUNCION: VISIBILIDAD TIPO . DIMS id parA LPARAMETROS parC illave SENTENCIAS fllave
   79        | VISIBILIDAD TIPO . id parA LPARAMETROS parC illave SENTENCIAS fllave
  101 DECLARACION: TIPO . id
  102            | TIPO . id igual VALAS
  106 DECLARACIONARRAY: TIPO . id DIMENSIONES
  107                 | TIPO . id DIMENSIONES igual EXPL
  108                 | TIPO . id DIMENSIONES igual VALORESA

    id    shift, and go to state 80
    iCor  shift, and go to state 61

    DIMS  go to state 81
    DIM   go to state 63


State 58

   61 ATRIBUTO: DECLARACION puntoComa .

    $default  reduce using rule 61 (ATRIBUTO)


State 59

   63 ATRIBUTO: DECLARACIONARRAY puntoComa .

    $default  reduce using rule 63 (ATRIBUTO)


State 60

   82 FUNCION: TIPO id . parA LPARAMETROS parC illave SENTENCIAS fllave
  101 DECLARACION: TIPO id .
  102            | TIPO id . igual VALAS
  106 DECLARACIONARRAY: TIPO id . DIMENSIONES
  107                 | TIPO id . DIMENSIONES igual EXPL
  108                 | TIPO id . DIMENSIONES igual VALORESA

    parA   shift, and go to state 82
    iCor   shift, and go to state 83
    igual  shift, and go to state 84

    $default  reduce using rule 101 (DECLARACION)

    DIMENSIONES  go to state 85


State 61

   86 DIM: iCor . fCor

    fCor  shift, and go to state 86


State 62

   81 FUNCION: TIPO DIMS . id parA LPARAMETROS parC illave SENTENCIAS fllave
   84 DIMS: DIMS . DIM

    id    shift, and go to state 87
    iCor  shift, and go to state 61

    DIM  go to state 88


State 63

   85 DIMS: DIM .

    $default  reduce using rule 85 (DIMS)


State 64

   90 CLASE: clase id heredade id illave . ICLASES fllave

    id             shift, and go to state 22
    tipoBooleano   shift, and go to state 23
    tipoEntero     shift, and go to state 24
    tipoCaracter   shift, and go to state 25
    tipoDecimal    shift, and go to state 26
    publico        shift, and go to state 2
    privado        shift, and go to state 3
    protegido      shift, and go to state 4
    vacio          shift, and go to state 27
    sobreescribir  shift, and go to state 28
    principal      shift, and go to state 29

    ICLASES           go to state 89
    ICLASE            go to state 31
    ATRIBUTO          go to state 32
    VISIBILIDAD       go to state 33
    PRINCIPAL         go to state 34
    CONSTRUCTOR       go to state 35
    FUNCION           go to state 36
    DECLARACION       go to state 37
    DECLARACIONARRAY  go to state 38
    TIPO              go to state 39


State 65

   11 ICLASES: ICLASES . ICLASE
   87 CLASE: VISIBILIDAD clase id illave ICLASES . fllave

    id             shift, and go to state 22
    fllave         shift, and go to state 90
    tipoBooleano   shift, and go to state 23
    tipoEntero     shift, and go to state 24
    tipoCaracter   shift, and go to state 25
    tipoDecimal    shift, and go to state 26
    publico        shift, and go to state 2
    privado        shift, and go to state 3
    protegido      shift, and go to state 4
    vacio          shift, and go to state 27
    sobreescribir  shift, and go to state 28
    principal      shift, and go to state 29

    ICLASE            go to state 52
    ATRIBUTO          go to state 32
    VISIBILIDAD       go to state 33
    PRINCIPAL         go to state 34
    CONSTRUCTOR       go to state 35
    FUNCION           go to state 36
    DECLARACION       go to state 37
    DECLARACIONARRAY  go to state 38
    TIPO              go to state 39


State 66

   89 CLASE: VISIBILIDAD clase id heredade id . illave ICLASES fllave

    illave  shift, and go to state 91


State 67

  123 TIPO: id .

    $default  reduce using rule 123 (TIPO)


State 68

   77 CONSTRUCTOR: id parA LPARAMETROS . parC illave SENTENCIAS fllave

    parC  shift, and go to state 92


State 69

   69 LPARAMETROS: PARAMETROS .
   71 PARAMETROS: PARAMETROS . coma PARAMETRO

    coma  shift, and go to state 93

    $default  reduce using rule 69 (LPARAMETROS)


State 70

   72 PARAMETROS: PARAMETRO .
